[package]
name = "servercore"
version = "0.1.0"
authors = ["JotaPe <jotape@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.12", features = ["phone"] }
uuid = { version = "0.8", features = ["serde"] }
