[package]
name = "users"
version = "0.1.0"
authors = ["JotaPe <jotape@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
servercore = { path = "../servercore" }
uuid = { version = "0.8", features = ["serde","v4"] }
prost = { version = "0.7" }
tonic = { version = "0.4" }
tokio = { version = "1.0", features = ["rt-multi-thread", "rt", "macros"] }

[build-dependencies]
tonic-build = "0.4"
